--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#base"><img src="images/3x4.jpg" alt="Image"/></a></div>
           <div class="h2 title">Muhammad Irfan Maulana</div>
-          <p class="category text-white">Mahasiswa TI, Web Developer, Operation Administrator</p><a class="btn btn-primary smooth-scroll mr-2" href="https://crude.irfanmaulana.tple02.com/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="
+          <p class="category text-white">Full-Stack Developer | Network Management | IT Specialist | Administration</p><a class="btn btn-primary smooth-scroll mr-2" href="https://crude.irfanmaulana.tple02.com/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="
           width: 280px;">Sistem Informasi Manajemen Karyawan</a>
         </div>
       </div>
@@ -77,7 +77,7 @@
             <div class="h4 mt-0 title">Basic Information</div>
             <div class="row">
               <div class="col-sm-4"><strong class="text-uppercase">Age:</strong></div>
-              <div class="col-sm-8">22</div>
+              <div class="col-sm-8">23</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
