--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#base"><img src="images/3x4.jpg" alt="Image"/></a></div>
           <div class="h2 title">Muhammad Irfan Maulana</div>
-          <p class="category text-white">Full-Stack Developer | Network Management | IT Specialist | Administration</p><a class="btn btn-primary smooth-scroll mr-2" href="https://crude.irfanmaulana.tple02.com/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="
-          width: 280px;">Sistem Informasi Manajemen Karyawan</a>
+          <p class="category text-white">Full-Stack Developer | Network Management | IT Specialist | Administration</p><a class="btn btn-primary smooth-scroll mr-2" href="https://www.linkedin.com/in/m-irfanmaulana/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor" style="
+          width: 280px;">LinkedIn</a>
         </div>
       </div>
       <div class="section">
